# pyeos

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  convert_eos_tables.py  extract_single_material.py  ideal_gas_sesame.py  ionmix_interpolation.py  ramps_eos_example.py  sesame_interpolation.py  sesame_z_split.py
pyeos/: __init__.py  eos.py  types.py
pyeos/analytical/: __init__.py  ideal_gamma.py
pyeos/interpolated/: __init__.py  ionmix_eos.py  sesame_eos.py  xarray_eos.py
pyeos/modifiers/: __init__.py  ramps_eos.py  scaled_eos.py  z_split.py
pyeos/reader/: __init__.py  ionmix.py  sesame.py
pyeos/writer/: __init__.py  ionmix.py  sesame.py
tests/: conftest.py  test_analytical_ideal_gamma.py  test_interpolated_sesame_eos.py  test_modifiers_scaled_eos.py  test_modifiers_z_split.py  test_reader_writer_ionmix.py  test_reader_writer_sesame.py  test_types.py  test_writer_sesame.py
