[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeos"
version = "0.1.0"
requires-python = ">=3.12"
description = "A Python package for Equation of State calculations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyEOS Contributors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "click>=8.1.0",
    "matplotlib>=3.10.1",
    "xarray>=2025.3.1",
]

[project.urls]
"Homepage" = "https://github.com/username/pyeos"
"Bug Tracker" = "https://github.com/username/pyeos/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyeos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pyeos"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "scipy-stubs>=1.15.2.2",
]
